# gtfs-scraper-viewer-planner

./: .env.example  .gitignore  Dockerfile.gateway  README.md  docker-compose.yml  load_stop_times_only.py  pyproject.toml  requirements.txt  scraper.py  viewer.py
_scraper/: iett.py
config/: cities.yaml
db/: advanced_functions.sql  examples.sql  functions.sql  indexes.sql  init.sql  triggers.sql
docs/: OPTIMIZATION.md  database.md  otp.md
otp/data/: README.txt
scripts/: benchmark_routing.py  download_turkey_osm_for_otp.ps1  ensure_gtfs_stops_for_stop_times.py  extract_istanbul_osm_for_otp.ps1  extract_istanbul_osm_for_otp.sh  otp_build_graph.ps1  otp_build_graph.sh  setup.ps1  setup.sh  validate_and_fix_gtfs.py  zip_gtfs_for_otp.ps1  zip_gtfs_for_otp.sh
src/: gtfs_source.py
src/database/: __init__.py  __main__.py  analytics.py  loader.py  repositories.py  test.py
src/gateway/: __init__.py  __main__.py  app.py  config.py  container_manager.py
src/planner/: __init__.py  __main__.py  app.py  calendar_filter.py  journey.py  otp_client.py  preprocess.py  raptor.py  repository.py  snapshot.py  timeutil.py  timing.py
src/scraper/: __init__.py  __main__.py  config.py  core.py  export.py  gtfs_integrity.py  http.py  pipeline.py  transfers_from_stops.py
src/scraper/gtfs/: __init__.py  transfers.py  validator.py  writer.py
src/scraper/osm/: __init__.py  downloader.py  extractor.py
src/scraper/sources/: __init__.py  base.py  easyway.py
src/viewer/: __init__.py  __main__.py  app.py  optimized_visualizer.py  visualizer.py
tests/: test_nearest_stops_snap.py  test_otp_polyline.py  test_routing_synthetic.py
